# R1LiteCollector

./: .gitignore  README.md
src/arx/arx_cmd_pub/: package.xml  setup.cfg  setup.py
src/arx/arx_cmd_pub/arx_cmd_pub/: cmd_processor.py  lift_node.py
src/arx/arx_r5_controller/: CMakeLists.txt  R5_master.urdf  package.xml
src/arx/arx_r5_controller/config/: gello_double_arm.yaml  infer_double_arm.yaml  open_double_arm.yaml  remote_master.yaml  remote_slave.yaml
src/arx/arx_r5_controller/include/arx_r5_controller/: KeyBoard.hpp  R5Controller.hpp  R5Visualization.hpp
src/arx/arx_r5_controller/include/arx_r5_controller/visualization/: visualization.hpp
src/arx/arx_r5_controller/launch/: catch_action_fast.launch.py  gello_double_arm.launch.py  infer_double_arm.launch.py  open_double_arm.launch.py  open_remote_master.launch.py  open_remote_slave.launch.py  open_single_arm.launch.py  open_vr_double_arm.launch.py  open_vr_single_arm.launch.py  torque_control_catch.launch.py
src/arx/arx_r5_controller/lib/arx_r5_src/: liborocos-kdl.so.1.5
src/arx/arx_r5_controller/src/: KeyBoard.cpp  R5Controller.cpp  R5Visualization.cpp
src/data_collector/: package.xml  setup.py
src/data_collector/config/: collect_config.yaml
src/data_collector/data_collector/: data_collector_node.py  data_processor.py  pedal.py
src/data_collector/launch/: data_collector.launch.py
src/inference/: package.xml  setup.cfg  setup.py
src/inference/inference/: camera_node.py  joint_base_node.py
src/inference/launch/: infer_arx.launch.py  infer_yam.launch.py
src/msg/arxmsgros2/arx5_arm_msg/msg/: RobotCmd.msg
src/msg/quest2_button_msg/: CMakeLists.txt  package.xml
src/msg/quest2_button_msg/msg/: Quest2Button.msg
src/msg/yam_arm_msg/: CMakeLists.txt  package.xml
src/msg/yam_arm_msg/msg/: YamCmd.msg  YamStatus.msg
src/rs_cameras/realsense-ros-4.51.1/: .travis.yml  README.md
src/rs_cameras/realsense-ros-4.51.1/realsense2_camera/: CMakeLists.txt
src/rs_cameras/realsense-ros-4.51.1/realsense2_camera/launch/: rs_launch.py
src/rs_cameras/realsense-ros-4.51.1/realsense2_camera/src/: realsense_node_factory.cpp  rs_node_setup.cpp
src/yam/yam_cmd_pub/: package.xml  setup.cfg  setup.py
src/yam/yam_cmd_pub/yam_cmd_pub/: arm_processor.py  cmd_processor.py
src/yam/yam_damiao_controller/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
src/yam/yam_damiao_controller/config/: vr_double_arm.yaml
src/yam/yam_damiao_controller/include/communication/: SerialPort.hpp  SocketCAN.hpp
src/yam/yam_damiao_controller/include/drivers/: damiao.hpp  damiao_socket.hpp  motor_control.hpp
src/yam/yam_damiao_controller/include/mathematical_model/: ARX_R5_fun.hpp  Robot_math.hpp  fifter.hpp  modern_robotics.hpp  yam_fun.hpp
src/yam/yam_damiao_controller/include/yam_damiao_controller/: Damiao_6dof_node.hpp  YamController.hpp  xml_vector_io.hpp
src/yam/yam_damiao_controller/launch/: open_vr_double_arm.launch.py  open_vr_single_arm.launch.py  takeover_vr_double_arm.launch.py  zj_single_arm.launch.py
src/yam/yam_damiao_controller/src/: Damiao_6dof_node.cpp  R5Visualization.cpp  YamController.cpp
src/yam/yam_damiao_controller/src/drivers/: motor_control.cpp
src/yam/yam_damiao_controller/src/mathematical_model/: ARX_R5_fun.cpp  modern_robotics.cpp  yam_fun.cpp
src/yam/yam_description/: CMakeLists.txt  package.xml
src/yam/yam_description/launch/: display.launch.py
src/yam/yam_description/rviz/: yam.rviz
src/yam/yam_description/urdf/: yam.urdf
